Style fix pagination jump

--- a/src/components/CampaignBanner/CampaignBanner.module.scss
+++ b/src/components/CampaignBanner/CampaignBanner.module.scss
@@ -423,7 +423,7 @@
             margin: 0 auto;
             padding: rem(39) rem(30) rem(29);
             @media #{$xl} {
-                padding: rem(156) 0 rem(168);
+                padding: rem(170) 0 rem(182);
             }
             .container {
                 max-width: rem(1060);
@@ -485,7 +485,7 @@
         .slide-4 {
             padding: rem(32) rem(30) rem(27);
             @media #{$xl} {
-                padding: rem(181) 0 rem(158);
+                padding: rem(188) 0 rem(165);
             }
             .container {
                 max-width: rem(1060);
